--- a/Exercice_1/index.html
+++ b/Exercice_1/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Exercice 1</title>
+    <style>
+    #image1:hover{
+      border: 3px solid red;
+      }
+      
+      
+    </style>
   </head>
   <body>
       <img src="images/image1.jpg" id="image1"/>
